Fixed bug #62715 (ReflectionParameter::isDefaultValueAvailable() wrong result)